src/objects/Royal_Mail_Cash_Order_Request__c.object
<CustomObject>
    <fields>
        <fullName>API_Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API Server URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Session_ID__c</fullName>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API Session ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_URL__c</fullName>
        <formula>&apos;&amp;Id=&apos; + Id +
&apos;&amp;TemplateId=a0PL0000001uwEd&apos; +
&apos;&amp;ReportId=00OL0000000OO2q&apos; +
&apos;&amp;QMode=1&apos; +
&apos;&amp;DS7=1&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Workflow_Debug_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; &amp;  $Api.Session_ID  &amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp; Conga_URL__c, &quot;Test Conga Workflow URL via UI&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Workflow Debug URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Week__c</fullName>
        <label>Delivery Week</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Sent__c</fullName>
        <label>Order Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Conga_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Conga Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Cash Order</fullName>
                </value>
                <value>
                    <fullName>Emergency Cash Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Royal Mail Cash Order Request</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royal Mail Cash Order Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>